# nd-grad

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  README.md
OpenMD/: CMakeLists.txt
OpenMD/ChargedRNEMD/include/: chargedRNEMDAnalysisMethod.hpp  chargedRNEMDParameters.hpp  methodFactory.hpp  regionDifference.hpp  regionFitting.hpp
OpenMD/ChargedRNEMD/scripts/: plotOptimizationAnalysis.py
OpenMD/ChargedRNEMD/scripts/Presentations/: arpExamPlots-2019.py
OpenMD/ChargedRNEMD/src/: chargedRNEMD.cpp  chargedRNEMDAnalysisMethod.cpp  regionDifference.cpp  regionFitting.cpp
OpenMD/RNEMDFileParsing/include/: rnemdFile.hpp  rnemdParameters.hpp  rnemdRegion.hpp
OpenMD/RNEMDFileParsing/src/: rnemdFile.cpp  rnemdRegion.cpp
OpenMD/ShiftXYZ/include/: xyzFile.hpp
OpenMD/ShiftXYZ/src/: shiftXYZ.cpp  xyzFile.cpp
OpenMD/rnemd/ChargedRNEMD/include/: chargedRNEMDAnalysisMethod.hpp  chargedRNEMDFile.hpp  chargedRNEMDParameters.hpp  regionDifference.hpp  regionFitting.hpp
OpenMD/rnemd/ChargedRNEMD/src/: chargedRNEMD.cpp  chargedRNEMDAnalysisMethod.cpp  regionDifference.cpp  regionFitting.cpp
OpenMD/rnemd/RNEMDFileParsing/include/: rnemdFile.hpp  rnemdParameters.hpp
OpenMD/rnemd/RNEMDFileParsing/src/: rnemdFile.cpp  rnemdRegion.cpp
OpenMD/rnemd/include/ChargedRNEMD/: chargedRNEMDFile.hpp  chargedRNEMDParameters.hpp
OpenMD/rnemd/samples/: single.rnemd
OpenMD/samples/: double.ecp  single.ecp  single.xyz  test.txt
OpenMD/scripts/: comselSeminarEmail.sh  equilibrator.sh  groupSubmit.sh
OpenMD/test/: CMakeLists.txt  runAllTests.sh
OpenMD/test/TestChargedRNEMD/: testChargedRNEMDParameters.cpp
OpenMD/test/TestFluxTypes/: testAssertions.hpp
OpenMD/test/TestFluxTypes/FluxType_Current/: testCurrentRNEMD.cpp  testCurrent_RNEMD.cpp  testCurrent_RNEMD.hpp
OpenMD/test/TestFluxTypes/FluxType_KE/: testKE_RNEMD.cpp  testKE_RNEMD.hpp
OpenMD/test/TestFluxTypes/FluxType_Px/: testPx_RNEMD.cpp  testPx_RNEMD.hpp
OpenMD/test/TestFluxTypes/FluxType_Single/: testSingleRNEMD.cpp  testSingle_RNEMD.cpp  testSingle_RNEMD.hpp
OpenMD/test/TestRNEMDRegions/: testRegionSplitting.cpp
OpenMD/test/TestShiftXYZ/: testShiftXYZ.cpp
nd-research/: CMakeLists.txt  README.md
nd-research/ChargedRNEMD/include/: regionDifference.hpp
nd-research/ChargedRNEMD/scripts/: findConcentration.py  plotOptimizationAnalysis.py
nd-research/ChargedRNEMD/scripts/Presentations/: mwtccConferencePlots-2019.py
nd-research/ChargedRNEMD/src/: regionDifference.cpp
nd-research/RNEMDFileParsing/include/: rnemdParameters.hpp  rnemdRegion.hpp
nd-research/ShiftXYZ/src/: shiftXYZ.cpp
nd-research/docs/: combine.md
nd-research/etc/atomTypes/: ar.xyz  ca.xyz  cl.xyz  methanol.xyz  na.xyz  so4.xyz  water.xyz
nd-research/etc/forcefields/: ChargedSPF.frc  SaltWater.frc  oppositeCharges.frc
nd-research/etc/includeFiles/: compAr.inc  molecAr.inc  molecArKr.inc  molecCaCl2.inc  molecNaCl.inc
nd-research/etc/includeFiles/npgBuilder/: p14x2-small.inc  p22x2-small.inc  p40-small.inc  p44-small.inc
nd-research/include/: emdFile.hpp  fzFile.hpp  rnemdFile.hpp  rnemdParameters.hpp  xyzFile.hpp  xyzParameters.hpp
nd-research/include/npgBuilder/: action.hpp  components.hpp  engine.hpp  entity.hpp  entityManager.hpp  vec2.hpp
nd-research/samples/: angularMomentum.rnemd  multipleFrames.xyz  nivs.rnemd
nd-research/samples/npgBuilder/: p12-small.inc  p12-small.omd  p14-small.inc  p14-small.omd  p16-small.inc  p16-small.omd  p18-small.inc  p18-small.omd  p20-small.inc  p20-small.omd  p22-small.inc  p22-small.omd  p24-small.inc  p24-small.omd  p26-small.inc  p26-small.omd  p28-small.inc  p28-small.omd
nd-research/samples/rnemd/: angularMomentum.rnemd  charge.rnemd  double.rnemd  momentum.rnemd  nivs.rnemd  spf.rnemd  thermal.rnemd
nd-research/scripts/: afsInit.sh  equilibrator.sh  forceFieldGeneration12-6-4.py  forwardDiffCompare.py  groupSubmit.sh  npgCombiner.sh  saltWaterBoxer.sh
nd-research/scripts/spfResultParsing/: calcEMDResults.py  calcRNEMDResults.py  chargedSPF.py  custom.rc  plotMembraneResults.py  plotMembraneResultsSalt.py
nd-research/src/: fzFile.cpp  rnemdFile.cpp  xyzFile.cpp
nd-research/src/applications/: kirkwoodBuffAnalysis.cpp  onsagerAnalysis.cpp  spfFitting.cpp  stitchRNEMD.cpp  thermalProfile.cpp
nd-research/src/applications/chargedRNEMD/: chargedRNEMD.cpp  chargedRNEMDAnalysisMethod.cpp  chargedRNEMDAnalysisMethod.hpp  chargedRNEMDFile.hpp  chargedRNEMDParameters.hpp  methodFactory.hpp  regionDifference.cpp  regionDifference.hpp  regionFitting.cpp  regionFitting.hpp
nd-research/src/applications/emdAnalysis/: currentDensityAnalysis.cpp  kirkwoodBuffAnalysis.cpp  onsagerAnalysis.cpp  rcorrAnalysis.cpp
nd-research/src/applications/misc/: squareMatrix.cpp  utils.cpp
nd-research/src/applications/molecularDynamics/: md.cpp
nd-research/src/applications/npgBuilder/: components.hpp  forwardDeclare.hpp  main.cpp
nd-research/src/applications/rnemdRegion/: rnemdRegion.cpp
nd-research/src/applications/shiftXYZ/: shiftXYZ.cpp
nd-research/src/applications/spf-rnemd/: chargedSPF.cpp  fzConstraintAnalysis.cpp  fzTimeDependence.cpp  membranePermeability.cpp  membranePermeabilitySalt.cpp  soretEffects.cpp  spfFitting.cpp  stitchRNEMD.cpp  (+1 more)
nd-research/src/types/: atom.hpp  molecularEntity.hpp  molecule.hpp  rigidBody.hpp  test.cpp
nd-research/src/utilities/: dataFieldParser.hpp  dataFields.cpp  dataFields.hpp  rnemdRegion.cpp  rnemdRegion.hpp
nd-research/test/: CMakeLists.txt  testAssertions.hpp
nd-research/test/TestChargedRNEMD/: testChargedRNEMDParameters.cpp
nd-research/test/TestDataFields/: testDataFieldParsing.cpp
nd-research/test/TestFileTypes/: testFileTypeParsing.cpp
nd-research/test/TestFluxTypes/: testAllFluxTypes.cpp
nd-research/test/TestRNEMDRegions/: Current1.txt  Current2.txt  Current3.txt  Current4.txt  Momentum1.txt  Momentum2.txt  Momentum3.txt  Momentum4.txt  Single1.txt  Single2.txt  Thermal1.txt  Thermal2.txt  Thermal3.txt  Thermal4.txt  testRegionSplitting.cpp
nd-research/test/TestShiftXYZ/: testShiftXYZ.cpp
(+3467 files in other folders)
